Modal overflow fix

--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,7 @@ h4{
 	padding: 25px;
 	display: flex;
     flex-direction: column;
+	overflow-y: scroll;
 }
 .modal .inner .title{
 	text-align: center;
